--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,4 @@
-<p>home works!</p>
+<div class="main-container">
+    <app-title [dataFromHome]="homeData"></app-title>
+    <app-about></app-about>
+</div>
