--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -10,21 +10,24 @@
         </p>
     </div>
     <div class="image-carousel">
-        <img src="../../assets/image/Image 2.png">
+        <img ngSrc="../../assets/image/Image 2.png" width="300" height="300">
     </div>
+</div>
+<div class="title-section">
+    <p class="title-text">About Us</p>
 </div>
 <div class="container center">
     <div class="name-container">
-        <p>{{bride_name}}</p>
-        <p>{{bride_heritance}} daughter of</p> 
-        <p>Mr. {{bride_father}} & Mrs. {{bride_mother}}</p>
+        <p class="h5-text">{{bride_name}}</p>
+        <p class="h7-text">{{bride_heritance}} daughter of</p> 
+        <p class="h6-text">Mr. {{bride_father}} & Mrs. {{bride_mother}}</p>
     </div>
-    <div class="image-container">
-        <img src="../../assets/image/Image 4.png">
+    <div class="image-container image-hideable">
+        <img ngSrc="../../assets/image/Image 4.png" width="400" height="400">
     </div>
     <div class="name-container">
-        <p>{{groom_name}}</p>
-        <p>{{groom_heritance}} son of</p> 
-        <p>Mr. {{groom_father}} & Mrs. {{groom_mother}}</p>
+        <p class="h5-text">{{groom_name}}</p>
+        <p class="h7-text">{{groom_heritance}} son of</p> 
+        <p class="h6-text">Mr. {{groom_father}} & Mrs. {{groom_mother}}</p>
     </div>
 </div>
