--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,15 @@
 <div class="main-container">
     <app-title [dataFromHome]="homeData"></app-title>
+    <hr> 
     <app-about></app-about>
+    <hr>
+    <app-schedule></app-schedule>
+    <app-rsvp></app-rsvp>
+    <hr>
+    <app-add></app-add>
+    <hr>
+    <app-wish [dataFromHome]="homeData"></app-wish>
+    <footer>
+        <p>created with love by Kevin & Cassie</p>
+    </footer>
 </div>
