--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,19 +1,17 @@
+@use '../../styles.scss' as styles;
+
 .container {
-    margin-top: 36px;
+    width: 90vw;
+    margin: 0px auto;
     display: flex;
     flex-direction: row;
-    gap: 2.5vw;
 }
 
 .center{
     justify-content: center;
     margin: auto;
     gap: 5vw;
-    padding-top: 5vw;
-}
-
-img {
-    width: 30vw;
+    padding-top: 20px;
 }
 
 .image-carousel{
@@ -28,10 +26,12 @@ img {
 }
 
 .name-container{
+    border: 1px solid styles.$light-gold;
     border-radius: 20px;
     padding: 10px;
-    width: 16vw;
-
+    width: 25vw !important;
+    height: 100% !important;
+    text-align: center;
 }
 
 @media screen and (max-width:600px) {
@@ -47,7 +47,13 @@ img {
         margin: auto;
     }
 
-    img {
-        width: 60vw;
+
+    .image-hideable{
+        display: none;
+    }
+
+    .name-container{
+        margin: 2vw auto;
+        width: 95% !important;
     }
 }
