--- a/src/app/add/add.component.html
+++ b/src/app/add/add.component.html
@@ -22,7 +22,7 @@
         </div>
         <div class="countdown-section">
             <div class="countdown"></div>
-            <button>Add to calender</button>
+            <button class="my-button">Add to calender</button>
         </div>
     </div>
 </div>
