--- a/src/app/rsvp/rsvp.component.html
+++ b/src/app/rsvp/rsvp.component.html
@@ -43,7 +43,7 @@
             </div>
         </div>
         <div class="footer-group">
-            <button>Submit</button>
+            <button class="my-button">Submit</button>
         </div>
     </div>
 </div>
