--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -11,7 +11,7 @@
                 <br>
                 Jl. Sukajadi No.223, Gegerkalong, Kec. Sukasari, Kota Bandung
             </p>
-            <button>See location</button>
+            <button class="my-button" (click)="showLocation1OnMap()">See location</button>
         </div>
         <div class="sub-section">
             <p class="h5-text">Wedding Reception</p>
@@ -21,7 +21,7 @@
                 <br>
                 Gedung Graha Sudirman, Jl. Jend. Sudirman No. 232A, Kota Bandung
             </p>
-            <button>See location</button>
+            <button class="my-button" (click)="showLocation2OnMap()">See location</button>
         </div>
     </div>
 </div>
