--- a/src/app/title/title.component.scss
+++ b/src/app/title/title.component.scss
@@ -26,6 +26,7 @@ img {
     background-image: url(../../assets/bg/bg_home_large.jpg);
     background-size:100%;
     background-repeat: no-repeat;
+    height: 80vh;
 }
 
 
