--- a/src/app/wish/wish.component.html
+++ b/src/app/wish/wish.component.html
@@ -9,6 +9,6 @@
             <p>From: {{guestName}}</p>
             <textarea type="text" placeholder="Messages..."></textarea>
         </div>
-        <button>Send</button>
+        <button class="my-button">Send</button>
     </div>
 </div>
