--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,10 @@
 <div class="main-container">
-    <app-title [dataFromHome]="homeData"></app-title>
+    <app-title 
+        [dataFromHome]="homeData" 
+        (scrollToAbout)="onScrollToAbout()">
+    </app-title>
     <hr> 
-    <app-about></app-about>
+    <app-about #aboutSection></app-about>
     <hr>
     <app-schedule></app-schedule>
     <app-rsvp></app-rsvp>
