--- a/src/app/title/title.component.html
+++ b/src/app/title/title.component.html
@@ -7,7 +7,7 @@
         <p class="title-text">The Wedding of</p>
         <p class="title-text">Kevin & Cassie</p>
         <p class="subtitle-text">{{ date }}</p>
-        <button>Open Invitation</button>
+        <button class="my-button" (click)="notifyParentToScroll()">Open Invitation</button>
     </div>
 </div>
 <div class="separator"> 
