--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,7 @@ body {
     position: relative;
 }
 
-button {
+.my-button {
     font-family: 'Mali';
     padding: 14px 36px;
     border-radius: 24px;
