--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
     <app-about #aboutSection></app-about>
     <hr>
     <app-schedule></app-schedule>
-    <app-rsvp></app-rsvp>
+    <app-rsvp [dataFromHome]="homeData"></app-rsvp>
     <hr>
     <app-add></app-add>
     <hr>
