--- a/src/app/add/add.component.html
+++ b/src/app/add/add.component.html
@@ -5,13 +5,13 @@
             <p class="h7-text">Your gift will be treasured in our heart</p>
         </div>
         <div class="gift-section">
-            <div class="gift">
-                <div class="icon"></div>
+            <div class="gift" (click)="openModalGift()">
+                <img class="icon" ngSrc="../../assets/icons/gift.png" width="24" height="24">
                 <p class="h7-text">Send Gift</p>
             </div>
-            <div class="gift">
-                <div class="icon"></div>
-                <p class="h7-text">Transfer Bank</p>
+            <div class="gift" (click)="openModalTransfer()">
+                <img class="icon" ngSrc="../../assets/icons/wallet.png" width="24" height="24">
+                <p class="h7-text">Bank Transfer</p>
             </div>
         </div>
     </div>
@@ -21,8 +21,8 @@
             <span class="title-text">Countdown</span>
         </div>
         <div class="countdown-section">
-            <div class="countdown"></div>
-            <button class="my-button">Add to calender</button>
+            <app-countdown targetDate="2026-01-17T09:00:00"></app-countdown>
+            <button class="my-button" (click)="saveToCalendar()">Add to calendar</button>
         </div>
     </div>
 </div>
