--- a/src/app/map-modal/map-modal.component.scss
+++ b/src/app/map-modal/map-modal.component.scss
@@ -57,8 +57,8 @@
   padding-top: 10px;
   align-items: center;
   button{
-    color: styles.$light-blue;
-    background-color: styles.$dark-blue;
+    color: wheat;
+    background-color: styles.$dark-brown;
   }
 }
 
