--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -13,6 +13,7 @@
             </p>
             <button class="my-button" (click)="showLocation1OnMap()">See location</button>
         </div>
+        @if(isBothEvent){
         <div class="sub-section">
             <p class="h5-text">Wedding Reception</p>
             <p class="h7-text">17 January 2025, 12:30 - End</p> 
@@ -23,5 +24,6 @@
             </p>
             <button class="my-button" (click)="showLocation2OnMap()">See location</button>
         </div>
+        }
     </div>
 </div>
