--- a/src/app/wish/wish.component.scss
+++ b/src/app/wish/wish.component.scss
@@ -14,8 +14,8 @@ textarea {
 }
 
 button {
-    color: styles.$dark-red;
-    background-color: styles.$light-pink;
+    color: wheat;
+    background-color: styles.$dark-brown;
     padding: 12px 24px;
     margin-top: 2vw;
 }
@@ -39,7 +39,7 @@ textarea {
     }
 
     textarea {
-        width: 90vw;
+        width: 85vw;
         height: 20vw;
     }
 }
