--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@ $dark-red: #94293D;
 $light-gold: #F4EADC;
 $dark-blue: #015282;
 $light-blue: #BFDAEA;
+$dark-brown: #492111;
 
 body {
     font-family: 'Mali';
