--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,13 +6,13 @@
     <hr> 
     <app-about #aboutSection></app-about>
     <hr>
-    <app-schedule></app-schedule>
+    <app-schedule [dataFromHome]="homeData"></app-schedule>
     <app-rsvp [dataFromHome]="homeData"></app-rsvp>
     <hr>
     <app-add></app-add>
     <hr>
     <app-wish [dataFromHome]="homeData"></app-wish>
     <footer>
-        <p>created with love by Kevin & Cassie</p>
+        <p>created with love by Kevin & Cassie ❤️</p>
     </footer>
 </div>
